# AG-First-Demo-Prj

./: .gitignore  README.md  app.py  gemini-chatbot.py  main.py  pyproject.toml  requirements.txt  simple_app.py
static/: index.html  modern.html  script.js  simple.html  style.css
